# bulk_mail

./: .env.example  config.py  main.py  pyproject.toml
data/: links.csv  recipients.csv
src/bmailer/: __init__.py
src/bmailer/models/: email_package.py  recipient.py  tracking_link.py
src/bmailer/modules/email/: __init__.py
src/bmailer/modules/sender/: __init__.py
src/bmailer/utils/: decode_config.py  email_builder.py  file_worker.py  sender.py  validator.py
templates/: default.html  default.txt
utils/: logging_config.py
